refactor: flexible page description

--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,3 @@
-title: jan syring-lingenfelder .de
+title: "jan syring-lingenfelder .de"
+description: "Jan Syring-Lingenfelder - private Homepage - Software, Webdesign, IT"
 enableEmoji: true
