feat: structured data about the content
Add the og:* and twitter:* meta tags to the head to make the metadata of
the posts easily accessible.
While I'm at it, cleanup the parameters and give the section index a 140
char summary.

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
-title: "jan syring-lingenfelder .de"
-description: "Jan Syring-Lingenfelder - private Homepage - Software, Webdesign, IT"
 enableEmoji: true
+params:
+  title: "jan syring-lingenfelder .de"
+  description: "Jan Syring-Lingenfelder - private Homepage - Software, Webdesign, IT"
 menu:
   main:
     - identifier: itryarch
