feat(hugo): allow attributes on blocks
New in hugo 0.83: This is gonna be useful!

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,10 @@
 enableEmoji: true
 enableGitInfo: true
+markup:
+  goldmark:
+    parser:
+      attribute:
+        block: true
 params:
   title: "jan syring-lingenfelder .de"
   description: "Jan Syring-Lingenfelder - private Homepage - Software, Webdesign, IT"
